Update test references to refactored class.